--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
+    "reactify": "^1.1.0",
     "require-dir": "^0.1.0",
     "semver": "^4.3.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "browser-sync": "^2.2.3",
+    "connect-history-api-fallback": "0.0.5",
     "react": "^0.13.0",
     "wiredep": "^2.2.2"
   },
