--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "reactify": "^1.1.0",
     "require-dir": "^0.1.0",
     "semver": "^4.3.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^2.4.0"
   },
   "dependencies": {
     "browser-sync": "^2.2.3",
